# common

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yaml
src/common/: env.py  settings.py
src/common/ai/: langfuse.py  stream_agent.py  types.py
src/common/ai/model/: __init__.py
src/common/ai/model/embeddings/: __init__.py  ollama.py  openai.py
src/common/ai/model/llm/: __init__.py  ollama.py  openai.py  openrouter.py
src/common/audio/: __init__.py  middlewares.py  recognition.py
src/common/tg/: get_chat_id.py  remove_keyboard.py
